src/apps/services/keeper/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keeper
  namespace: keeper
spec:
  selector:
    app.kubernetes.io/name: keeper
  ports:
    - name: http
      port: 3000
      targetPort: http
