src/apps/services/keeper/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keeper
  namespace: keeper
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - keeper.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keeper
          port: 3000
